# vitellary

./: Cargo.toml  README.adoc
.cargo/: config
src/: game.rs  main.rs
src/game/: common.rs  linux.rs  macos.rs  mod.rs
